--- a/base/plantillas/listado.html
+++ b/base/plantillas/listado.html
@@ -3,7 +3,7 @@
 {% block body %}
 <div class="container">
     <div class="my-3">
-        <a class="btn btn-sm btn-outline-secondary"  href="/">/</a>
+        <a class="btn btn-sm btn-outline-secondary"  href="{{ cfg.urls.site }}">/</a>
         <span>{{ cfg.titulo_pagina }}</span>
     </div>
     <div class="my-1 text-center">
