--- a/base/plantillas/base.html
+++ b/base/plantillas/base.html
@@ -1,15 +1,5 @@
 <!DOCTYPE html>
 <html>
-    {% if pag.titulo.es%}
-      {% if pag.titulo.es == "" %}{% set pag_titulo = '' %}{% else %}{% set pag_titulo = ' - ' + pag.titulo.es %}{% endif %}
-    {% else %}
-      {% if pag.titulo == "" %}{% set pag_titulo = '' %}{% else %}{% set pag_titulo = ' - ' + pag.titulo %}{% endif %}
-    {% endif %}
-
-    {% set titulo = cfg.metadatos.titulo + pag_titulo %}
-    {% set url_img_compartir =  cfg.urls.site + cfg.metadatos.imagen_compartir  %}
-
-
     <head>
         <meta charset="utf-8">
 
@@ -19,23 +9,22 @@
         <meta content="width" name="MobileOptimized">
         <meta content="on" http-equiv="cleartype">
 
-        <title>{{ titulo }}</title>
+        <title>{{ pag.titulo }}</title>
 
         <meta content="{{ cfg.metadatos.descripcion }}" name="description">
 	    <meta content="index, follow" name="robots">
+	    <link rel="canonical" href="{{ cfg.urls.site }}">
+	    <link rel="image_src" href="{{ cfg.urls.site }}{{ cfg.metadatos.imagen_compartir }}">
 
-	    <meta property="og:image" content="{{ url_img_compartir }}">
-		<meta property="og:image:secure_url" content="{{ url_img_compartir }}">
-	    <meta property="og:image:type" content="image/jpg">
-		<meta property="og:image:width" content="600" />
-		<meta property="og:image:height" content="600" />
-	    <meta property="og:title" content="{{ titulo }}">
+	    <meta property="og:image" content="{{ cfg.urls.site }}{{ cfg.metadatos.imagen_compartir }}">
+		<meta property="og:image:secure_url" content="{{ cfg.urls.site }}{{ cfg.metadatos.imagen_compartir }}">
+	    <meta property="og:image:type" content="image/svg">
+		<meta property="og:image:width" content="256" />
+		<meta property="og:image:height" content="256" />
+	    <meta property="og:title" content="{{ cfg.metadatos.titulo }}">
 	    <meta property="og:site_name" content="{{ cfg.metadatos.dominio }}">
 	    <meta property="og:description" content="{{ cfg.metadatos.descripcion }}">
 	    <meta property="og:locale" content="es_AR">
-
-	    <link rel="canonical" href="{{ cfg.urls.posversobienal }}">
-	    <link rel="image_src" href="{{ url_img_compartir }}">
 
         <!-- bootstrap  -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -48,8 +37,10 @@
 
         <link href="{{ cfg.urls.site }}lib/css/estilo.css?{{ cfg.cache_actu }}" rel="stylesheet">
 
-        <link rel="shortcut icon" href="{{ cfg.metadatos.favicon }}" type="image/x-icon" />
+        <!-- iconos -->
+        <link rel="shortcut icon" href="{{ cfg.urls.site }}{{ cfg.metadatos.favicon }}" type="image/x-icon">
 
+        <!-- script -->
         <script src="{{ cfg.urls.site }}lib/js/lzma.js"></script>
 
     </head>
