--- a/base/plantillas/base.html
+++ b/base/plantillas/base.html
@@ -42,7 +42,6 @@
 
         <!-- script -->
         <script src="{{ cfg.urls.site }}lib/js/lzma.js"></script>
-
     </head>
     <body>
         <div class="contenido">
@@ -58,6 +57,9 @@
                 <a class="btn btn-sm text-success"  href="{{ cfg.urls.github_del_proyecto }}">Disponible en GITHUB </a>
             </p>
         </footer>
+        <script>
+         const compressor = new LZMA( '{{ cfg.urls.site }}lib/js/lzma_worker.js' );
+        </script>
         <script src="{{ cfg.urls.site }}lib/js/init.js" type="module"></script>
     </body>
 </html>
