--- a/base/plantillas/base.html
+++ b/base/plantillas/base.html
@@ -44,6 +44,15 @@
         <script src="{{ cfg.urls.site }}lib/js/lzma.js"></script>
     </head>
     <body>
+        <header>
+            <div class="container">
+                <div class="my-3">
+                    <a class="btn btn-sm btn-outline-secondary"  href="{{ cfg.urls.site }}" title="Ir a la portada">/</a>
+                    <a class="btn btn-sm btn-outline-secondary"  href="{{ cfg.urls.site }}pag/ayuda/" title="Ir a la ayuda">?</a>
+                    <span>{{ cfg.titulo_pagina }}</span>
+                </div>
+            </div>
+        </header>
         <div class="contenido">
             {% block body %}{% endblock %}
         </div>
