--- a/base/plantillas/listado.html
+++ b/base/plantillas/listado.html
@@ -2,10 +2,6 @@
 
 {% block body %}
 <div class="container">
-    <div class="my-3">
-        <a class="btn btn-sm btn-outline-secondary"  href="{{ cfg.urls.site }}">/</a>
-        <span>{{ cfg.titulo_pagina }}</span>
-    </div>
     <div class="my-1 text-center">
         <div class="fs-4 text-center p-3">{{ markdown(pag.contenido) }}</div>
     </div>
@@ -13,7 +9,6 @@
     <div>
         <ul class="lista-bb p-0">
             {% for item in pag.lista_bb %}
-            {% if item.show %}
             <li class="list-group my-3 py-2">
                 {% if item.comment %}
                 <div class="small mt-4 px-2 rounded-1">{{ markdown((item.comment)) }}</div>
@@ -24,19 +19,19 @@
                     <div class="d-flex">
                         <code class="d-block p-2 text-light col copiar "
                               contenteditable="true"
-                              data-query_greggman="{{ item.query_greggman }}"
-                              title="Click para COPIAR y ACTIVAR">{{ code }}</code>
-                        <input class="text-center rounded-2 col-1 bg-dark text-secondary mx-1 border-0" type="number" min="0" name="rate" value="{{ item.rate }}" title="Sample Rate">
+                              title="Click para COPIAR y ACTIVAR">{{ code[0] }}</code>
+                        <input class="text-center rounded-2 col-1 bg-dark text-secondary mx-1 border-0"
+                               type="number" min="0" name="rate" value="{{ code[1] }}" title="Sample Rate">
                     </div>
                     {% endfor %}
                 </div>
             </li>
-            {% endif %}
             {% endfor %}
 
             {% if pag.lista_bb | count %}
             <div class="utiles">
                 <nav class="d-grid gap-1">
+                    <button class="btn btn-sm btn-secondary" name="play-pause" title="Audio: Play Pause">P</button>
                     <a class="btn btn-sm btn-secondary"
                        href="#"
                        name="externalApp"
@@ -50,7 +45,6 @@
                        data-site="{{ cfg.reproductores.html5bytebeat[0] }}"
                        target="_h5bb" title="Abrir en {{ cfg.reproductores.html5bytebeat[1] }}">
                         {{ cfg.reproductores.html5bytebeat[2] }}</a>
-                    <button class="btn btn-sm btn-secondary" name="play-pause" title="Audio: Play Pause">P</button>
                 </nav>
             </div>
 
