--- a/base/plantillas/pagina.html
+++ b/base/plantillas/pagina.html
@@ -2,6 +2,6 @@
 
 {% block body %}
 <div class="container">
-    <div class="{{ pag.estilo_de_pagina }}">{{ markdown(pag.contenido) }}</div>
+    <div class="{{ pag.estilo_de_contenido }}">{{ markdown(pag.contenido) }}</div>
 </div>
 {% endblock %}
