Atajos de teclado.

--- a/base/plantillas/base.html
+++ b/base/plantillas/base.html
@@ -47,8 +47,8 @@
         <header>
             <div class="container">
                 <div class="my-3">
-                    <a class="btn btn-sm btn-outline-secondary"  href="{{ cfg.urls.site }}" title="Ir a la portada">/</a>
-                    <a class="btn btn-sm btn-outline-secondary"  href="{{ cfg.urls.site }}pag/ayuda/" title="Ir a la ayuda">?</a>
+                    <a class="btn btn-sm btn-outline-secondary" name="a_portada" href="{{ cfg.urls.site }}" title="Ir a la portada">/</a>
+                    <a class="btn btn-sm btn-outline-secondary" name="a_ayuda" href="{{ cfg.urls.site }}pag/ayuda/" title="Ir a la ayuda">?</a>
                     <span>{{ cfg.titulo_pagina }}</span>
                 </div>
             </div>
