Ajustes de glitcheado. También de comportamiento de utilidades.

--- a/base/plantillas/listado.html
+++ b/base/plantillas/listado.html
@@ -19,7 +19,7 @@
                     <div class="d-flex">
                         <small class="p-2 text-secondary">{{ loop.index }}. </small>
                         <code class="d-block p-2 text-light col copiar "
-                              contenteditable="true"
+                              contenteditable="true" spellcheck="false"
                               title="Click para COPIAR y ACTIVAR">{{ code[0] }}</code>
                         <input class="text-center rounded-2 col-1 bg-dark text-secondary mx-1 border-0"
                                type="number" min="0" name="rate" value="{{ code[1] }}" title="Sample Rate">
